--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "11.1.2",
+    "next-secure-headers": "^2.2.0",
+    "next-sitemap": "^1.6.192",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -17,6 +22,7 @@
     "@types/react": "17.0.31",
     "eslint": "8.1.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
     "typescript": "4.4.4"
   }
 }
