--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "clsx": "^1.2.0",
     "fast-glob": "^3.2.11",
     "focus-visible": "^5.2.0",
-    "next": "^12.3.0",
+    "next": "^13.0.0",
     "postcss-focus-visible": "^6.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.1.4"
   },
@@ -31,8 +31,8 @@
     "@prettier/plugin-xml": "^2.2.0",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.5",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "^13.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "typescript": "4.8.4"
