--- a/package.json
+++ b/package.json
@@ -30,13 +30,37 @@
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
+    "@haydenbleasel/harmony": "^1.1.9",
+    "@next/eslint-plugin-next": "^13.0.7",
     "@prettier/plugin-xml": "^2.2.0",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
-    "eslint": "^8.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
     "eslint-config-next": "^13.0.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.11",
-    "typescript": "4.8.4"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.7",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "stylelint": "^14.16.0",
+    "stylelint-prettier": "^2.0.0",
+    "typescript": "^4.9.4"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/@haydenbleasel/harmony/eslint-next.js",
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    }
+  },
+  "prettier": "@haydenbleasel/harmony/prettier",
+  "stylelint": {
+    "extends": "@haydenbleasel/harmony/stylelint"
   }
 }
