--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
     "@haydenbleasel/use-theme": "^1.0.7",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.13",
-    "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.1.2",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^12.2.3",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
+    "contentlayer": "^0.2.9",
     "fast-glob": "^3.2.11",
     "focus-visible": "^5.2.0",
     "next": "^13.0.0",
+    "next-contentlayer": "^0.2.9",
     "postcss-focus-visible": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.5.1",
+    "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
+    "shiki": "^0.12.1",
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
