--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.13",
     "@mdx-js/loader": "^2.1.2",
     "@mdx-js/react": "^2.1.5",
+    "@next/font": "^13.0.7",
     "@next/mdx": "^12.2.3",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
