--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
+    "@haydenbleasel/command-bar": "^1.0.9",
     "@haydenbleasel/use-theme": "^1.0.7",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.13",
