--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@haydenbleasel/command-bar": "^1.0.9",
+    "@haydenbleasel/use-online": "^1.0.3",
     "@haydenbleasel/use-theme": "^1.0.7",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.13",
@@ -24,11 +25,12 @@
     "contentlayer": "^0.2.9",
     "fast-glob": "^3.2.11",
     "focus-visible": "^5.2.0",
-    "next": "^13.0.0",
+    "next": "^13.0.7",
     "next-contentlayer": "^0.2.9",
     "postcss-focus-visible": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.5.1",
