--- a/package.json
+++ b/package.json
@@ -28,37 +28,19 @@
     "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
-    "@haydenbleasel/harmony": "^1.1.9",
-    "@next/eslint-plugin-next": "^13.1.1",
+    "@beskar-labs/harmony": "^2.0.8",
     "@prettier/plugin-xml": "^2.2.0",
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "eslint": "^8.31.0",
+    "eslint": "^8.32.0",
     "eslint-config-next": "^13.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.2.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.3.1",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
+    "jest": "^29.4.1",
+    "prettier": "^2.8.3",
     "stylelint": "^14.16.1",
-    "stylelint-prettier": "^2.0.0",
     "typescript": "^4.9.4"
   },
-  "eslintConfig": {
-    "extends": "./node_modules/@haydenbleasel/harmony/eslint-next.js",
-    "parserOptions": {
-      "project": "./tsconfig.json"
-    }
-  },
-  "prettier": "@haydenbleasel/harmony/prettier",
+  "prettier": "@beskar-labs/harmony/prettier",
   "stylelint": {
-    "extends": "@haydenbleasel/harmony/stylelint"
+    "extends": "@beskar-labs/harmony/stylelint"
   }
 }
