--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "yarn install && next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,6 +22,7 @@
     "fast-glob": "^3.2.11",
     "focus-visible": "^5.2.0",
     "next": "^13.0.0",
+    "next-sitemap": "^3.1.47",
     "postcss-focus-visible": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
