--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fast-glob": "^3.2.11",
     "focus-visible": "^5.2.0",
     "next": "^13.0.0",
+    "next-secure-headers": "^2.2.0",
     "next-sitemap": "^3.1.47",
     "postcss-focus-visible": "^6.0.4",
     "react": "^18.2.0",
