--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^12.2.3",
     "@tailwindcss/typography": "^0.5.4",
+    "@vercel/analytics": "^0.1.8",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
     "fast-glob": "^3.2.11",
