Dynamic open graph images

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@next/mdx": "^12.2.3",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/analytics": "^0.1.8",
+    "@vercel/og": "^0.0.27",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
     "fast-glob": "^3.2.11",
     "focus-visible": "^5.2.0",
     "next": "^13.0.0",
     "next-secure-headers": "^2.2.0",
+    "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.47",
     "postcss-focus-visible": "^6.0.4",
     "react": "^18.2.0",
