--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "haydenbarnett",
-  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "yarn install && next dev",
@@ -10,8 +8,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.0",
-    "@heroicons/react": "^2.0.13",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.1.2",
     "@mdx-js/react": "^2.1.5",
@@ -22,12 +18,10 @@
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
     "fast-glob": "^3.2.11",
-    "focus-visible": "^5.2.0",
     "next": "^13.0.0",
     "next-secure-headers": "^2.2.0",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.47",
-    "postcss-focus-visible": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
@@ -39,8 +33,8 @@
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "eslint": "^8.32.0",
-    "eslint-config-next": "^13.0.0",
     "jest": "^29.4.1",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.3",
     "stylelint": "^14.16.1",
     "typescript": "^4.9.4"
