--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
     "fast-glob": "^3.2.11",
+    "framer-motion": "^10.12.16",
     "next": "^13.0.0",
     "next-secure-headers": "^2.2.0",
     "next-seo": "^5.15.0",
