--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@mdx-js/loader": "^2.1.2",
     "@mdx-js/react": "^2.1.5",
     "@next/mdx": "^12.2.3",
+    "@react-three/drei": "^9.77.1",
+    "@react-three/fiber": "^8.13.3",
     "@tailwindcss/typography": "^0.5.4",
+    "@types/three": "^0.152.1",
     "@vercel/analytics": "^0.1.8",
     "@vercel/og": "^0.0.27",
     "autoprefixer": "^10.4.7",
@@ -25,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.1.4",
+    "three": "^0.153.0"
   },
   "devDependencies": {
     "@beskar-labs/harmony": "^2.0.8",
