--- a/package.json
+++ b/package.json
@@ -10,38 +10,36 @@
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.1.2",
     "@mdx-js/react": "^2.1.5",
-    "@next/mdx": "^13.4.7",
-    "@react-three/drei": "^9.77.3",
-    "@react-three/fiber": "^8.13.3",
+    "@next/mdx": "^13.4.8",
     "@tailwindcss/typography": "^0.5.4",
-    "@types/three": "^0.152.1",
     "@vercel/analytics": "^1.0.1",
     "@vercel/og": "^0.5.8",
     "autoprefixer": "^10.4.7",
     "clsx": "^1.2.0",
-    "fast-glob": "^3.2.11",
-    "framer-motion": "^10.12.16",
-    "next": "^13.4.7",
+    "cobe": "^0.6.3",
+    "fast-glob": "^3.3.0",
+    "framer-motion": "^10.12.18",
+    "next": "^13.4.8",
     "next-secure-headers": "^2.2.0",
     "next-seo": "^6.1.0",
-    "next-sitemap": "^4.1.3",
+    "next-sitemap": "^4.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spring": "^9.7.2",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.1.4",
-    "three": "^0.153.0"
+    "tailwindcss": "^3.1.4"
   },
   "devDependencies": {
-    "@beskar-labs/harmony": "^2.0.8",
+    "@beskar-labs/harmony": "^2.4.4",
     "@prettier/plugin-xml": "^2.2.0",
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.13",
-    "eslint": "^8.32.0",
-    "jest": "^29.4.1",
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
+    "eslint": "^8.44.0",
+    "jest": "^29.6.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.3",
-    "stylelint": "^15.9.0",
-    "typescript": "^5.1.3"
+    "stylelint": "^15.10.0",
+    "typescript": "^5.1.6"
   },
   "prettier": "@beskar-labs/harmony/prettier",
   "stylelint": {
