--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "scripts": {
     "dev": "yarn install && next dev",
     "build": "next build",
@@ -10,16 +11,16 @@
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.1.2",
     "@mdx-js/react": "^2.1.5",
-    "@next/mdx": "^13.4.8",
+    "@next/mdx": "^13.4.13",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/analytics": "^1.0.1",
-    "@vercel/og": "^0.5.8",
+    "@vercel/og": "^0.5.10",
     "autoprefixer": "^10.4.7",
-    "clsx": "^1.2.0",
+    "clsx": "^2.0.0",
     "cobe": "^0.6.3",
-    "fast-glob": "^3.3.0",
-    "framer-motion": "^10.12.18",
-    "next": "^13.4.8",
+    "fast-glob": "^3.3.1",
+    "framer-motion": "^10.15.0",
+    "next": "^13.4.13",
     "next-secure-headers": "^2.2.0",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
@@ -27,18 +28,18 @@
     "react-dom": "^18.2.0",
     "react-spring": "^9.7.2",
     "remark-gfm": "^3.0.1",
-    "tailwindcss": "^3.1.4"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@beskar-labs/harmony": "^2.4.4",
-    "@prettier/plugin-xml": "^2.2.0",
-    "@types/node": "20.3.3",
-    "@types/react": "18.2.14",
-    "eslint": "^8.44.0",
-    "jest": "^29.6.0",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.3",
-    "stylelint": "^15.10.0",
+    "@beskar-labs/harmony": "^2.5.1",
+    "@prettier/plugin-xml": "^3.1.1",
+    "@types/node": "20.4.8",
+    "@types/react": "18.2.18",
+    "eslint": "^8.46.0",
+    "jest": "^29.6.2",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.1",
+    "stylelint": "^15.10.2",
     "typescript": "^5.1.6"
   },
   "prettier": "@beskar-labs/harmony/prettier",
