--- a/package.json
+++ b/package.json
@@ -1,49 +1,48 @@
 {
   "private": true,
   "scripts": {
-    "dev": "yarn install && next dev",
+    "dev": "next dev",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@mapbox/rehype-prism": "^0.8.0",
-    "@mdx-js/loader": "^2.1.2",
-    "@mdx-js/react": "^2.1.5",
-    "@next/mdx": "^13.4.19",
+    "@mapbox/rehype-prism": "^0.9.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.3",
     "@tailwindcss/typography": "^0.5.10",
-    "@vercel/analytics": "^1.0.2",
-    "@vercel/og": "^0.5.14",
-    "autoprefixer": "^10.4.15",
-    "clsx": "^2.0.0",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/og": "^0.6.2",
+    "autoprefixer": "^10.4.18",
+    "clsx": "^2.1.0",
     "cobe": "^0.6.3",
-    "fast-glob": "^3.3.1",
-    "framer-motion": "^10.16.4",
-    "next": "^13.4.19",
-    "next-secure-headers": "^2.2.0",
-    "next-seo": "^6.1.0",
+    "fast-glob": "^3.3.2",
+    "framer-motion": "^11.0.10",
+    "next": "^14.1.3",
+    "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-spring": "^9.7.2",
+    "react-spring": "^9.7.3",
     "remark-gfm": "^4.0.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@beskar-labs/harmony": "^2.5.3",
-    "@prettier/plugin-xml": "^3.2.1",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
-    "eslint": "^8.49.0",
+    "@prettier/plugin-xml": "^3.3.1",
+    "@types/node": "20.11.26",
+    "@types/react": "18.2.65",
+    "eslint": "^8.57.0",
+    "eslint-config-harmony": "^3.1.9",
     "jest": "^29.7.0",
-    "postcss": "^8.4.30",
-    "prettier": "^3.0.3",
-    "stylelint": "^15.10.3",
-    "typescript": "^5.2.2"
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "stylelint": "^16.2.1",
+    "typescript": "^5.4.2"
   },
-  "prettier": "@beskar-labs/harmony/prettier",
+  "prettier": "eslint-config-harmony/prettier",
   "stylelint": {
-    "extends": "@beskar-labs/harmony/stylelint"
+    "extends": "eslint-config-harmony/stylelint"
   }
 }
