--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "ultracite lint",
+    "format": "ultracite format",
+    "check-updates": "npx npm-check-updates -i --format group"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.9.0",
@@ -30,19 +32,11 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@prettier/plugin-xml": "^3.3.1",
+    "@biomejs/biome": "1.9.4",
     "@types/node": "20.11.26",
     "@types/react": "18.2.65",
-    "eslint": "^8.57.0",
-    "eslint-config-harmony": "^3.1.9",
-    "jest": "^29.7.0",
     "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "stylelint": "^16.2.1",
-    "typescript": "^5.4.2"
-  },
-  "prettier": "eslint-config-harmony/prettier",
-  "stylelint": {
-    "extends": "eslint-config-harmony/stylelint"
+    "typescript": "^5.4.2",
+    "ultracite": "4.1.20"
   }
 }
