--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,11 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "plugins": [{ "name": "next" }]
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
     "next-env.d.ts",
