--- a/biome.json
+++ b/biome.json
@@ -1,11 +1,4 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["ultracite"],
-  "linter": {
-    "rules": {
-      "style": {
-        "useFilenamingConvention": "off"
-      }
-    }
-  }
+  "extends": ["ultracite"]
 }
